# rust-ode

./: Cargo.toml  README.Md  graphy.R  justfile
src/: main.rs
