[package]
name = "odesolver"
version = "0.1.0"
edition = "2021"
authors= ["Michael <medewitt@wakehealth.edu>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[dependencies]
ode_solvers = "0.3.7"
rand = "0.8.5"
rand_distr = "0.4.3"
